--- a/style.css
+++ b/style.css
@@ -1,30 +1,11 @@
 /*
 file per personalizzazioni future 
 */
-.dropdown-menu li {
-    position: relative;
-}
-
-.dropdown-menu .dropdown-submenu {
-    display: none;
-    position: relative;
-    left: 10%;
-}
-
-.dropdown-menu .dropdown-submenu-left {
-    right: 100%;
-    left: auto;
-}
-
-.dropdown-menu>li:hover>.dropdown-submenu {
-    display: block;
-}
-
 p{
     text-align:justify;
 }
 
 .articolo{
     height: 50%;
-    font-size:2vw;
+    font-size:2vw; /*Cambia in base alla grandezza dello schermo*/
 }
